--- a/UwsgiScript/uwsgi.ini
+++ b/UwsgiScript/uwsgi.ini
@@ -1,15 +1,15 @@
 # uwsig使用配置文件启动
 [uwsgi]
-chdir=/api_automation_test
+chdir=/Users/xingxiang.ding/PycharmProjects/autovenv/api_automation_test
 # 指定项目的application
 module=api_automation_test.wsgi:application
 # 指定sock的文件路径
-socket=/api_automation_test/UwsgiScript/uwsgi.sock
+socket=/Users/xingxiang.ding/PycharmProjects/autovenv/api_automation_test/UwsgiScript/uwsgi.sock
 # 进程个数
 workers=5
-pidfile=/api_automation_test/UwsgiScript/uwsgi.pid
+pidfile=/Users/xingxiang.ding/PycharmProjects/autovenv/api_automation_test/UwsgiScript/uwsgi.pid
 # 指定IP端口
-http=0.0.0.0:8000
+http=0.0.0.0:8001
 # 指定静态文件
 static-map=/static=/api_automation_test/frontend/dist/static
 # 启动uwsgi的用户名和用户组
@@ -28,5 +28,5 @@ harakiri=30
 # 设置缓冲
 post-buffering=4096
 # 设置日志目录
-daemonize=/api_automation_test/logs/uwsgi.log
+daemonize=/Users/xingxiang.ding/PycharmProjects/autovenv/api_automation_test/logs/uwsgi.log
 http-time=10
